<resources>
    <string name="app_name">Staselovich_P3_l1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="search">Поиск</string>
    <string name="favorits">Избранное</string>
    <string name="history">История</string>
    <string name="lastday">вчера</string>
    <string name="share_success_text">картинка отправлена</string>
    <string name="textWorkTable">Установить как обои рабочего стола</string>
    <string name="textLockScreen">Установить на заставку экрана блокировки</string>
    <string name="textSaveFavorite">Сохранить в избранное</string>
    <string name="buttonPortofolio">Портофолио</string>
    <string name="imageSet">"Фото установлено"</string>
    <string name="imageFavorite">"Фото в избранном"</string>
    <string name="NoLink">"Нету ссылки"</string>
    <string name="Date">"Дата"</string>
    <string name="Color">"Цвет"</string>
    <string name="Dimensions">"Размеры"</string>
</resources>