<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="kotlin.jvm.functions.Function0"/>
        <variable
            name="formattedDate"
            type="String" />
        <variable
            name="description"
            type="String" />
        <variable
            name="expandHandler"
            type="Function0&lt;kotlin.Unit>" />
        <variable
            name="about"
            type="com.example.staselovich_p3_l1.model.UnsplashPhoto" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/oval_bagraund"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/textInstogram"
            style="@style/textInstogram_textVector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{about.user.instagram_username}"
            app:layout_constraintBottom_toBottomOf="@+id/imageInstogram"
            app:layout_constraintStart_toEndOf="@+id/imageInstogram"
            app:layout_constraintTop_toTopOf="@+id/imageInstogram" />

        <TextView
            android:id="@+id/textVector"
            style="@style/textInstogram_textVector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{about.user.twitter_name}"
            app:layout_constraintBottom_toBottomOf="@+id/imageVector"
            app:layout_constraintStart_toEndOf="@+id/imageVector"
            app:layout_constraintTop_toTopOf="@+id/imageVector" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageButton"
            style="@style/ImageButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/cat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textNameInfo"
            style="@style/textNameInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{about.user.username}"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="@+id/imageButton"
            app:layout_constraintVertical_bias="0.18" />

        <TextView
            android:id="@+id/textEmail"
            style="@style/textEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{about.user.name}"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toBottomOf="@+id/textNameInfo" />

        <ImageButton
            android:id="@+id/imageInstogram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/l"
            android:background="@drawable/ic_instagram__1__1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <ImageButton
            android:id="@+id/imageVector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs"
            android:background="@drawable/ic_vector"
            app:layout_constraintEnd_toEndOf="@+id/imageInstogram"
            app:layout_constraintStart_toStartOf="@+id/imageInstogram"
            app:layout_constraintTop_toBottomOf="@+id/imageInstogram" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="@dimen/s"
            android:layout_marginEnd="@dimen/dimens50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageVector">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPortfolio"
                style="@style/buttonPortfolio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonPortofolio" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/l"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        </View>

        <TextView
            android:id="@+id/textDescription"
            style="@style/textDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> expandHandler.invoke()}"
            android:text="@{description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/l"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescription">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="0.5"
                android:background="@drawable/oval_search"
                android:backgroundTint="@color/teal_200"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imagetime"
                    style="@style/size_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_access_time" />

                <TextView
                    android:id="@+id/textTime"
                    style="@style/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Date" />

                <TextView
                    android:id="@+id/textDate"
                    style="@style/textData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{formattedDate}" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/colorBagraund"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="0.5"
                android:background="@drawable/oval_search"
                android:backgroundTint="@color/yelow"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewColor_lens"
                    style="@style/size_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_color_lens" />

                <TextView
                    android:id="@+id/textColor"
                    style="@style/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Color" />

                <TextView
                    android:id="@+id/textHex"
                    style="@style/size_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{about.color}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="0.5"
                android:background="@drawable/oval_search"
                android:backgroundTint="@color/red"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageAspect_ratio"
                    style="@style/size_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_aspect_ratio" />

                <TextView
                    android:id="@+id/Aspect_ratioSize"
                    style="@style/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Dimensions" />

                <TextView
                    android:id="@+id/Aspect_ratioNumbers"
                    style="@style/size_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{`Px:`+ about.height + `x` + about.width}" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>